# ganbare

./: .dockerignore  .gitignore  BLESS.txt  Cargo.toml  Dockerfile  Dockerfile.build  Dockerfile.database  Dockerfile.run  README.md  TODO.md  backup_db.sh  build_everything.sh  build_musl.sh  build_static.sh  deploy_binary_production.sh  deploy_binary_testing.sh  deploy_new_items_production.sh  deploy_new_items_testing.sh  docker-compose.yml  image.php?id=78059&p=mp&s=600_740&op=.1  libjpeg.dylib  libproc_macro-e81c29b3a5ff619d.rlib  restore_db_contents.sh  schema.rs  serve.sh  test_placeholder.tsv  tsconfig.json  words.txt
ganbare_backend/: Cargo.toml
ganbare_backend/src/: audio.rs  email.rs  errors.rs  event.rs  helpers.rs  lib.rs  manage.rs  models.rs  password.rs  quiz.rs  schema.rs  session.rs  test.rs  user.rs
ganbare_backend/src/schema/: inferred_schema.rs  mod.rs  specified_schema.rs
migrations/20160821164924_create_users/: down.sql  up.sql
migrations/20161022173507_add_quiz/: down.sql  up.sql
migrations/20161108232358_answers/: down.sql  up.sql
migrations/20161211000310_user_stats/: down.sql  up.sql
migrations/20161217140710_event_reform/: down.sql  up.sql
migrations/20170110162205_retelling_task/: down.sql  up.sql
migrations/20170115174212_words_have_skill_levels/: down.sql  up.sql
migrations/20170116164402_new_events/: down.sql  up.sql
migrations/20170123230428_add_file_hashes_to_audio/: down.sql  up.sql
migrations/20170127045311_training_event/: down.sql  up.sql
migrations/20170204002040_rename_sorting/: down.sql  up.sql
migrations/20170211192734_indices_on_sess_token_table/: down.sql  up.sql
migrations/20170211222302_add_test_marker_to_pending_items/: down.sql  up.sql
migrations/20170216222822_better_sessions/: down.sql  up.sql
migrations/20170217192036_session_secret/: down.sql  up.sql
migrations/20170309191446_posttest_group/: down.sql  up.sql
migrations/20170309223945_user_last_seen/: down.sql  up.sql
migrations/2020-10-12-122655_raise_quiz_limits/: down.sql  up.sql
migrations/2020-10-20-153356_add_end_survey/: down.sql  up.sql
migrations/2020-10-31-054117_add_simple_test/: down.sql  up.sql
migrations/2020-11-18-181514_add_email_secret_type/: down.sql  up.sql
scripts/: Dockerfile  Dockerfile.build  Dockerfile.database  backup_db.sh  backup_db_restore.sh  backup_store.sh  build_everything.sh  build_musl.sh  build_release.sh  build_static.sh  deploy_binary.sh  deploy_binary_production.sh  deploy_image_aws.sh  deploy_image_gcp.sh  deploy_image_ssh.sh  deploy_items.sh  deploy_new_items.sh  deploy_new_items_production.sh  deploy_new_items_ssh.sh  deploy_new_items_testing.sh  local.env  new_items_from_backup.sh  old_prd.env  old_stg.env  prd.env  restore_db_contents.sh  stg.env
scripts/old/: build_static.sh  run.sh
src/: app_pages.rs  app_pages.rs.bk  email.rs  helpers.rs  http_api.rs  http_api.rs.bk  lib.rs  main.rs  main.rs.bk  manager_pages.rs  manager_pages.rs.bk  models.rs  password.rs  schema.rs  test.rs
src/sass/: ie9.scss  main.scss
src/sass/base/: _page.scss  _typography.scss
src/sass/components/: _button.scss  _form.scss  _imgbutton.scss  _myown.scss
src/sass/layout/: _footer.scss  _main.scss  _wrapper.scss
src/ts/: accentuate.ts  add_quiz.ts  add_word.ts  audio.ts  manage.ts  mictest.ts  quiz.ts  recorder.d.ts  retelling.ts  survey.ts  typings.json  users.ts
src/ts/typings/: index.d.ts
src/ts/typings/globals/howler/: index.d.ts  typings.json
static/assets/css/: main.css  main.css.map
static/assets/sass/: main.scss
static/assets/sass/base/: _typography.scss
static/assets/sass/components/: _button.scss  _form.scss  _myown.scss
static/assets/sass/layout/: _footer.scss  _main.scss
static/assets/sass/libs/: _vars.scss
static/assets/sfx/: correct.m4a  wrong.m4a
static/css/: main.css
static/fonts/: default.css
static/images/: maru_green.acorn
static/js/: decoderWorker.min.js  encoderWorker.min.js  howler.js  howler.min.js  recorder.min.js
static/sfx/: bell.m4a  ping.m4a  wrong.m4a
static/ts/: accentuate.js  accentuate.js.map  add_quiz.js  add_quiz.js.map  add_word.js  add_word.js.map  app.js  app.js.map  library.js  library.js.map  manage.js  manage.js.map  quiz.js  quiz.js.map
templates/: add_quiz.html  add_users.html  add_word.html  agreement.html  audio.html  base.html  change_password.html  confirm.html  email_confirm_email.html  error.html  events.html  fresh_install.html  generic.html  hello.html  info.html  join.html  main.html  manage.html  nag_disabled.html  over.html  password_reset.html  posttest_done.html  posttest_info.html  pretest_done.html  pretest_info.html  pw_reset_email.html  reset_password.html  retelling.html  send_mail.html  send_pw_reset_email.html  settings.html  simple_test_done.html  simple_test_info.html  slacker_heatenings.html  survey.html  thanks.html  users.html  welcome.html  welcome2.html
tools/: Cargo.toml
tools/src/: clean.rs
user_audio/: assets_placeholder.gitkeep
