[package]
name = "ganbare"
version = "1.0.3"
authors = ["Pyry Kontio <pyry.kontio@drasa.eu>"]

[features]
default = [ "specify_schema" ]
specify_schema = ["ganbare_backend/specify_schema"]

[dependencies]
diesel = { version = "0.16", features = ["chrono", "large-tables", "postgres"]}
diesel_codegen = { version = "0.16", default-features = false, features = ["postgres", "dotenv"] }
dotenv = "0.15"
ganbare_backend = { path = "ganbare_backend" }
chrono = { version = "0.4", features = ["serde"]}
rand = "0.3"
sharp_pencil = "0.4"
hyper = "0.10.13"
env_logger = "0.4"
log = "0.4"
lazy_static = "1"
handlebars = { version = "3.5"}
unicode-normalization = "0.1"
regex = "1.0"
tempdir = "0.3"
try_map = "0.2"
mime = "0.2"
url = "1.2"
multi_mut = "0.1"
cookie = "0.7"
typemap = "0.3"
error-chain = { version = "0.12", default-features = false }
r2d2 = "0.7"
r2d2-diesel = "0.16"
rust-crypto = "0.2"
lettre = "0.6"
data-encoding = "1.1"
time = "0.1"
serde_json = "1.0"
serde = "1.0"

[patch.crates-io]
lettre = { git = "https://github.com/golddranks/lettre", branch = "v0.6.x" }
