[package]
name = "ganbare"
version = "1.0.3"
authors = ["Pyry Kontio <pyry.kontio@drasa.eu>"]
edition = "2018"

[features]
default = [ "specify_schema" ]
specify_schema = ["ganbare_backend/specify_schema"]

[dependencies]
diesel = { version = "1", features = ["chrono", "32-column-tables", "postgres", "r2d2"]}
diesel_migrations = { version = "1" }
dotenv = "0.15"
ganbare_backend = { path = "ganbare_backend" }
chrono = { version = "0.4", features = ["serde"]}
rand = "0.7"
pencil = { version = "0.6", package = "sharp_pencil" }
hyper = "0.10.13"
pretty_env_logger = "0.4"
log = "0.4"
lazy_static = "1"
handlebars = { version = "3.5"}
unicode-normalization = "0.1"
regex = "1.5"
tempdir = "0.3"
try_map = "0.3"
mime = "0.2"
url = "1.2"
multi_mut = "0.1"
cookie = "0.12"
typemap = "0.3"
error-chain = { version = "0.12", default-features = false }
rust-crypto = "0.2"
lettre = "0.6"
data-encoding = "2"
time = "0.1"
serde_json = "1.0"
serde = "1.0"
