[package]
name = "ganbare_backend"
version = "0.3.0"
authors = ["Pyry Kontio <pyry.kontio@drasa.eu>"]
edition = "2018"

[features]
specify_schema = []

[dependencies]
diesel = { version = "1", features = ["chrono", "32-column-tables", "postgres"]}
diesel_migrations = "1"
dotenv = "0.15"
rust-crypto = "0.2"
clap = "2.20"
chrono = { version = "0.4", features = ["serde"]}
rpassword = "5"
rand = "0.7"
binary_macros = "1.0"
env_logger = "0.7"
data-encoding = "2"
lazy_static = "1"
sharp_pencil = { path = "/Users/kon/repos/sharp_pencil" }
log = "0.4"
lettre = "0.9"
lettre_email = "0.9"
mime = "0.3"
tempdir = "0.3"
regex = "1"
unicode-normalization = "0.1"
try_map = "0.3"
handlebars = "3"
reqwest = "0.10"
r2d2 = "0.8"
r2d2-diesel = "1"
byteorder = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1"
serde_json = "1"
magic = "0.12"
anyhow = "1"
headers = "0.3"
thiserror = "1"
futures-util = "0.3"
tokio = { version = "0.2", features = ["full"] }