[package]
name = "ganbare_backend"
version = "0.3.0"
authors = ["Pyry Kontio <pyry.kontio@drasa.eu>"]

[features]
default = ["specify_schema"]
specify_schema = []

[dependencies]
diesel = { version = "0.16", features = ["chrono", "large-tables", "postgres"]}
diesel_codegen = {version = "0.16", default-features = false, features = ["postgres", "dotenv"] }
dotenv = "0.10"
rust-crypto = "0.2"
error-chain = { version = "0.12", default-features = false}
clap = "2.20"
chrono = { version = "0.4", features = ["serde"]}
rpassword = "0.3"
rand = "0.3"
binary_macros = "0.6"
env_logger = "0.4"
data-encoding = "1.1"
lazy_static = "1"
sharp_pencil = "0.4"
log = "0.3"
lettre = "0.6"
mime = "0.2"
tempdir = "0.3"
regex = "1.0"
unicode-normalization = "0.1"
try_map = "0.2"
handlebars = "3.5"
reqwest = "0.6"
r2d2 = "0.7"
r2d2-diesel = "0.16"
byteorder = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_derive = "1.0"
serde_json = "1.0"
magic = "0.12"

[patch.crates-io]
lettre = { git = "https://github.com/golddranks/lettre", branch = "v0.6.x" }
