[package]
name = "ganbare_backend"
version = "0.3.0"
authors = ["Pyry Kontio <pyry.kontio@drasa.eu>"]
edition = "2018"

[features]
default = ["specify_schema"]
specify_schema = []

[dependencies]
diesel = { version = "1", features = ["chrono", "32-column-tables", "postgres", "r2d2"]}
diesel_migrations = { version = "1" }
dotenv = "0.15"
rust-crypto = "0.2"
error-chain = { version = "0.12", default-features = false}
clap = "2.20"
chrono = { version = "0.4", features = ["serde"]}
rpassword = "5.0"
rand = "0.7"
binary_macros = "1.0"
env_logger = "0.7"
data-encoding = "2"
lazy_static = "1"
sharp_pencil = "0.6"
log = "0.4"
lettre = "0.6"
mime = "0.2"
tempdir = "0.3"
regex = "1.0"
unicode-normalization = "0.1"
try_map = "0.3"
handlebars = "3.5"
byteorder = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
serde_json = "1.0"
magic = "0.12"
ureq = "1.5"

[patch.crates-io]
lettre = { git = "https://github.com/golddranks/lettre", branch = "v0.6.x" }
