[package]
name = "tools"
version = "0.1.0"
authors = ["Pyry Kontio <pyry.kontio@drasa.eu>"]

[[bin]]
name = "clean"
path = "src/clean.rs"

[dependencies]

reqwest = "*"
ganbare_backend = { version = "*", path ="../ganbare_backend" }
clap = "*"
dotenv = "*"
mime = "*"
unicode-normalization = "*"
tempdir = "*"
log = "*"
env_logger = "*"
lazy_static = "*"
rand = "*"
regex = "*"
time = "*"
